<resources>
    <string name="app_name">Android-7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_note">Update Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_note">Save Note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="enter_your_note_title">Enter your note title</string>
</resources>