<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.add_note.AddNoteFragment">

    <TextView
        android:id="@+id/lbNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_horizontal"
        android:text="@string/add_new_note"
        android:textColor="@color/base"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/enter_your_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbNote" />


    <EditText
        android:id="@+id/etNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/enter_your_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_note_title" />

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_note"
        android:textAllCaps="false"
        android:textColor="@color/light_white"
        app:backgroundTint="@color/base"
        app:layout_constraintEnd_toEndOf="@id/etNoteText"
        app:layout_constraintStart_toStartOf="@id/etNoteText"
        app:layout_constraintTop_toBottomOf="@id/etNoteText" />

</androidx.constraintlayout.widget.ConstraintLayout>