<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_update_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_horizontal"
        android:text="@string/update_note"
        android:textColor="@color/base"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_update_note_title"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_note" />


    <EditText
        android:id="@+id/et_update_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/note"
        android:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_note_title" />

    <Button
        android:id="@+id/btn_update_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/update_note"
        android:textAllCaps="false"
        android:textColor="@color/light_white"
        app:backgroundTint="@color/base"
        app:layout_constraintTop_toBottomOf="@id/et_update_note_text"
        app:layout_constraintEnd_toEndOf="@id/et_update_note_text"
        app:layout_constraintStart_toStartOf="@id/et_update_note_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>